--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "dependencies": {
     "ag-grid-community": "^26.2.1",
     "ag-grid-react": "^26.2.0",
+    "bootstrap": "^5.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.2"
   },
   "devDependencies": {
     "typescript": "3.3.3"
