--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ag-grid-community": "^26.2.1",
     "ag-grid-react": "^26.2.0",
     "bootstrap": "^5.1.3",
+    "mdb-react-ui-kit": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.1",
