--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "ag-grid-community": "^26.2.1",
     "ag-grid-react": "^26.2.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "mdb-react-ui-kit": "^3.0.0",
     "pigeon-maps": "^0.21.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
